<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/gachas" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/dartOpac"
        app:contentPadding="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".33"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/tourist2" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/AvatarUno" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".33"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/tourist" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/AvatarDos" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".34"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/backpacker" />

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/AvatarTres" />
                        </LinearLayout>
                    </RadioGroup>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/NombreRegistro"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/ApellidoRegistro"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/CorreoRegistro"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/ContrasenaRegistro"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/ContrasenaRegistro2"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/ApodoUsuario"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/TelefonoUsuario"
                    app:boxBackgroundColor="@color/ligthOpac"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_phone_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>