<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:id="@+id/CardLogin"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/ligthOpac"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginVertical="20dp"
                    android:src="@drawable/backpacker" />


                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/UsuarioLogin"
                    app:hintEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_account_circle_black_24dp"
                        android:drawablePadding="20dp"
                        android:fontFamily="sans-serif"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/ContrasenaLogin"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.design.widget.FloatingActionButton
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CardLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-24dp"
            app:borderWidth="2dp"
            app:fabSize="normal"
            app:rippleColor="@color/colorPrimary"
            app:srcCompat="@drawable/login" />

    </RelativeLayout>

    <Button
        android:id="@+id/IrRegistroLogin"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:onClick="irRegistro"
        android:text="@string/Registro"
        android:textColor="@color/ligth"
        android:textStyle="bold" />

</android.support.design.widget.CoordinatorLayout>